// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ButtonComponent should render a active button 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-active"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a button with icon 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-outline btn-square"
    >
      <!--container-->
      <mat-icon
        aria-hidden="true"
        class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
        data-mat-icon-type="font"
        role="img"
      >
         add 
      </mat-icon>
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a button with text 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-outline"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a default button 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a disabled button 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-disabled"
      disabled=""
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a ghost button 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-text"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a primary button 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render a secondary button 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-secondary btn-outline"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;

exports[`ButtonComponent should render an outline button 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-button>
    <button
      class="btn btn-primary btn-outline"
    >
       txt 
      <!--container-->
      <!--container-->
    </button>
  </app-button>
</div>
`;
